fix anchor jump spacing for dita docs [#168114102]

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -913,7 +913,7 @@ h3, .h3  {
 }
 
 @media (min-width: 700px) {
-  h2[id]:before, h3[id]:before, h2 > a:before, h3 > a:before {
+  h2:before, h3:before, h2 > a:before, h3 > a:before {
     height: 180px;
     margin: -180px 0 0;
   }
